5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1837_2220.log
== TEST (2019-07-01 23:27:21) 
-- CODE:
from numpy import *v
mat= array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	mat[:,7]=max(mat[:,7])
	print(max(mat[i,:]))
-- ERROR:
File "XXXX", line 1
    from numpy import *v
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:27:33) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	mat[:,7]=max(mat[:,7])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:28:38) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(7):
	mat[:,7]=max(mat[:,7])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:29:55) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(7):
	mat[i,:]=max(mat[i,:])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:30:39) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(7):
	mat[:,i]=max(mat[:,i])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:31:00) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(7):
	mat[:,i]=max(mat[:,i])
	print(max(mat[:,i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:31:30) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(7):
	mat[:,i]=max(mat[:,i])
	print(max(mat[:,i]))
-- EXECUTION TIME:
1.0664
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
99.9
93.1
89.7
56.4
65.7
78.9
81.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:34:07) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(mat.shape):
	mat[i,:]=max(mat[i,:])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:34:37) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	mat[i,:]=max(mat[i,:])
	print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:34:58) 
-- CODE:
from numpy import *
mat= array(eval(input("digite: ")))
for i in range(shape(mat)[0]):
	mat[i,:]=max(mat[i,:])
	print(max(mat[i,:]))
-- EXECUTION TIME:
1.05211
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
